# algoritmos-cripto

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/classes/: pseudoprimo_forte.py
src/: app.py  config.py  exceptions.py  logger.py  registry.py
src/algorithm_info/: __init__.py  achar_fator.py  diofantina.py  euclides.py  fermat.py  modular_exp.py  pseudoprimo_forte.py
src/components/: __init__.py  cards.py  feedback.py  forms.py  layout.py  styles.py  theme.py
src/controllers/: __init__.py  algorithm_controller.py
src/models/: __init__.py  achar_fator.py  base.py  diofantina.py  euclides.py  fermat.py  modular_exp.py  pseudoprimo_forte.py  teorema_chines.py  validators.py
src/validators/: __init__.py  input_validators.py
src/views/: __init__.py  achar_fator_view.py  base_view.py  diofantina_view.py  euclides_view.py  fermat_view.py  modular_exp_view.py  pseudoprimo_forte_view.py  teorema_chines_view.py
tests/: __init__.py  test_achar_fator.py  test_config.py  test_diofantina.py  test_euclides.py  test_fermat.py  test_modular_exp.py  test_pseudoprimo_forte.py  test_registry.py  test_teorema_chines.py  test_validators.py
